[project]
name = "fastreid"
version = "1.4.0"
readme = "README.md"
dependencies = [
  "faiss-cpu>=1.7.3,<2.0.0",
  "opencv-python>=4.7.0.68,<5.0.0.0",
  "scikit-learn>=1.2.1,<2.0.0",
  "tabulate>=0.9.0,<0.10.0",
  "tensorboard>=2.12.0,<3.0.0",
  "termcolor>=2.2.0,<3.0.0",
  "torch>=1.7.0,<2.6",
  "torchvision>=0.8.1",
  "yacs>=0.1.8,<0.2.0",
]

[project.urls]
Repository = "https://github.com/JDAI-CV/fast-reid"

[tool.setuptools.packages.find]
where = ["fastreid"]

[build-system]
requires = ["setuptools>=67.6"]
build-backend = "setuptools.build_meta"
